<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="howdie.com.last.wifip2p.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textView" />

    <Button
        android:text="@string/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/client_button"
        android:id="@+id/server_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/server_ip"
        android:ems="10"
        android:text="@string/_192_168_2_175"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:id="@+id/server_edittext" />

    <Button
        android:text="@string/client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClient"
        android:id="@+id/client_button"
        android:layout_above="@+id/server_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/port_number"
        android:text="@string/_8888"
        android:ems="10"
        android:layout_below="@+id/server_edittext"
        android:layout_alignStart="@+id/server_edittext"
        android:layout_marginTop="17dp"
        android:id="@+id/port_edittext" />


</RelativeLayout>
